2011-04-14 Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_graph.php: added function "graph_custom_sql_graph2".
	
	* include/graphs/fgraph.php: added as $homedir parameter in some functions.
	
	* include/functions_reporting.php: changed to new engine.

2011-04-14  Sergio Martin <sergio.martin@artica.es>

	* include/graphs/functions_pchart.php
	include/graphs/pChart/pDraw.class.php
	include/graphs/fgraph.php: Added rotation in bar graphs 
	top axis. 
	Fixed pie legend position

2011-04-14 Javier Lanz <javier.lanz@artica.es>

	* godmode/massive/massive_edit_modules.php: Added functionality to edit
	SNMP version on massive operations

2011-04-14 Miguel de Dios  <miguel.dedios@artica.es>

	* include/graphs/functions_pchart.php: added method to force height or not,
	changed to show all columns name in the hgraph and vgraph, fixed the colors
	when passed the parameter "fine" to color. And in the function
	"pch_bar_graph" change to calculate left margin instead to fixed value.
	
	* include/graphs/fgraph.php: added new parameter in the function
	"hbar_graph" to force or unforce the graph height.

2011-04-14 Miguel de Dios  <miguel.dedios@artica.es>

	* include/graphs/functions_pchart.php: setted the xmargin to 0.
	
	* include/graphs/fgraph.php: in function "pie_graph" reduce to 8 the
	portions for the pie.
	
	* include/functions_db.php: changed the call "debug" to "ui_debug".

2011-04-14  Sergio Martin <sergio.martin@artica.es>

	* include/graphs/functions_pchart.php
	include/graphs/functions_gd.php
	include/graphs/fgraph.php: Added x and y
	axis name possibility to line, stacked line and
	stacked area graphs. 
	Added dual posibility of calling to functions_gd 
	(thorugh url and with function call).  
	Clean code.

2011-04-14  Junichi Satoh  <junichi@rworks.jp>

	* extras/pandoradb_migrate_v3.2_to_v4.0.sql,
	pandoradb.sql,
	pandoradb.postgreSQL.sql,
	pandoradb.oracle.sql: Changed tperfil.name type to fix field length
	shortage.
